--- a/catalog/view/theme/default/company.html
+++ b/catalog/view/theme/default/company.html
@@ -221,7 +221,8 @@
 							<h1 class="com_h1">WHO WE ARE</h1>
 							<p class="com_p">
 								Hot Beauty Hair is a remarkable human hair supplier in China, providing best virgin human hair
-								 with wholesale factory price. We specialize in best one donor 
+								 with wholesale factory price. <br />
+								 We specialize in best one donor 
 								Brazilian hair, Peruvian Hair, Indian Hair and Luxury Funmi Hair.</br>
 								We have own our production designing and developing team in factory.
 							</p>
@@ -235,7 +236,7 @@
 						<div class="top">
 							<hr class="com_hr" />
 							<span class="com_span"><i>02</i></span>
-							<h1 class="com_h1">WHAT YOU CAN GET FORM USE</h1>
+							<h1 class="com_h1">WHAT YOU CAN GET FORM US</h1>
 						</div>
 						
 						<ul class="clearfix">
