--- a/catalog/view/theme/default/my_address.html
+++ b/catalog/view/theme/default/my_address.html
@@ -214,6 +214,7 @@
 						<li class="active"><a href="###">My Orders</a></li>
 						<li><a href="###">Account Information</a></li>
 						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Shopping Cart</a></li>
 						<li><a href="###">My Wish List</a></li>
 						<li><a href="###">My VIP</a></li>
 						<li><a href="###">My Coupon</a></li>
@@ -224,58 +225,69 @@
 				
 				<div class="right m_address clearfix">
 					<form action="" class="clearfix">
-						<p>* Required fields</p>
-						<label for="">
-							<span>Frist Name *</span>
-							<input type="text"  />
-						</label>
-						<label class="mr_no" for="">
-							<span>Last Name *</span>
-							<input type="text"  />
-						</label>
-						<label class="add" for="">
-							<span>Address*</span>
-							<input style="margin-bottom: 16px;" type="text"  />
-							<input type="text"  />
-						</label>
-						<label for="">
-							<span>Country *</span>
-							<select name="">
-								<option value="">Country </option>
-								<option value="">Country </option>
-								<option value="">Country </option>
-							</select>
-						</label>
-						<label class="mr_no" for="">
-							<span>Post Code *</span>
-							<input type="text"  />
-						</label>
-						<label for="">
-							<span>City *</span>
-							<input type="text"  />
-						</label>
-						<label class="mr_no" for="">
-							<span>State *</span>
-							<select name="">
-								<option value="">slesect State </option>
-								<option value="">slesect State </option>
-								<option value="">slesect State </option>
-							</select>
-						</label>
-						<label for="">
-							<span>Phone *</span>
-							<input type="text"  />
-						</label>
-						<div class="xy_div">
-							<label for="" class="dx_label">
-								<input class="check_input" type="checkbox" />
-								<i class="check_i"></i>
+						<div class="form_div clearfix">
+							<p>* Required fields</p>
+							<label for="">
+								<span>Frist Name *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
 							</label>
-							<span>Set this address as my default address</span>
+							<label class="mr_no" for="">
+								<span>Last Name *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="add" for="">
+								<span>Address*</span>
+								<input style="margin-bottom: 16px;" type="text"  />
+								<p class="ts_ps">This field is required</p>
+								<input type="text"  />
+							</label>
+							<label for="">
+								<span>Country *</span>
+								<select name="">
+									<option value="">Country </option>
+									<option value="">Country </option>
+									<option value="">Country </option>
+								</select>
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="mr_no" for="">
+								<span>Post Code *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label for="">
+								<span>City *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="mr_no" for="">
+								<span>State *</span>
+								<select name="">
+									<option value="">slesect State </option>
+									<option value="">slesect State </option>
+									<option value="">slesect State </option>
+								</select>
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label for="">
+								<span>Phone *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<div class="xy_div">
+								<label for="" class="dx_label">
+									<input class="check_input" type="checkbox" />
+									<i class="check_i"></i>
+								</label>
+								<span>Set this address as my default address</span>
+								<p class="ts_ps">This field is required</p>
+							</div>
+							
+							<button class="qx_btn" type="reset">cancel</button>
+							<button class="tj_btn">UPDATA</button>
 						</div>
-						
-						<button class="qx_btn" type="reset">cancel</button>
-						<button class="tj_btn">UPDATA</button>
 					</form>
 				</div>
 				
