--- a/catalog/view/theme/default/product_details.html
+++ b/catalog/view/theme/default/product_details.html
@@ -280,7 +280,7 @@
 											</ul>
 										</div>
 									</div>
-								<!-- 	<ul style="display: none;" class="clearfix">
+									<ul style="display: none;" class="clearfix">
 										<li class="active">12inch 100g</li>
 										<li>12inch  100g</li>
 										<li>14inch  100g</li>
@@ -292,7 +292,7 @@
 										<li>26inch  100g</li>
 										<li>28inch  100g</li>
 										<li>30inch  100g</li>
-									</ul> -->
+									</ul>
 									
 								</label>
 								<span class="measurement">
