--- a/catalog/view/theme/default/my_center.html
+++ b/catalog/view/theme/default/my_center.html
@@ -214,6 +214,7 @@
 						<li class="active"><a href="###">My Orders</a></li>
 						<li><a href="###">Account Information</a></li>
 						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Shopping Cart</a></li>
 						<li><a href="###">My Wish List</a></li>
 						<li><a href="###">My VIP</a></li>
 						<li><a href="###">My Coupon</a></li>
