--- a/catalog/view/theme/default/my_coupon.html
+++ b/catalog/view/theme/default/my_coupon.html
@@ -211,9 +211,10 @@
 				<div class="left clearfix">
 					<h1>MY ACCOUNT</h1>
 					<ol>
-						<li><a href="###">My Orders</a></li>
-						<li class="active"><a href="###">Account Information</a></li>
+						<li class="active"><a href="###">My Orders</a></li>
+						<li><a href="###">Account Information</a></li>
 						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Shopping Cart</a></li>
 						<li><a href="###">My Wish List</a></li>
 						<li><a href="###">My VIP</a></li>
 						<li><a href="###">My Coupon</a></li>
