--- a/catalog/view/theme/default/my_help.html
+++ b/catalog/view/theme/default/my_help.html
@@ -211,9 +211,10 @@
 				<div class="left clearfix">
 					<h1>MY ACCOUNT</h1>
 					<ol>
-						<li><a href="###">My Orders</a></li>
-						<li class="active"><a href="###">Account Information</a></li>
+						<li class="active"><a href="###">My Orders</a></li>
+						<li><a href="###">Account Information</a></li>
 						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Shopping Cart</a></li>
 						<li><a href="###">My Wish List</a></li>
 						<li><a href="###">My VIP</a></li>
 						<li><a href="###">My Coupon</a></li>
@@ -223,9 +224,10 @@
 				</div>
 				
 				<div class="right m_call clearfix">
-					<p><img src="img/png/call1.png" alt="" /> +8615800028742</p>
+					<p><img src="img/png/call1.png" alt="" />Whatsapp: +8615800028742</p>
 					<p><img src="img/png/call2.png" alt="" /> rebecca@hotbeautyhair.com</p>	
 					<p><img src="img/png/call3.png" alt="" /> Submit your Feedback</p>	
+					<p><img src="img/png/call4.png" alt=""/>Skype</p>
 					<span>*Comment:</span>
 					<textarea name="" rows="" cols=""></textarea>
 					<a class="a_btn" href="###">SUBMIT&nbsp;&nbsp;&nbsp;></a>
