--- a/catalog/view/theme/default/my_order.html
+++ b/catalog/view/theme/default/my_order.html
@@ -214,6 +214,7 @@
 						<li class="active"><a href="###">My Orders</a></li>
 						<li><a href="###">Account Information</a></li>
 						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Shopping Cart</a></li>
 						<li><a href="###">My Wish List</a></li>
 						<li><a href="###">My VIP</a></li>
 						<li><a href="###">My Coupon</a></li>
@@ -224,40 +225,44 @@
 				
 				<div class="right m_order clearfix">
 					<form action="" class="clearfix">
-						<p>* Required fields</p>
-						<label for="" class="f_name clearfix">
-							<span>Frist Name *</span>
-							<input type="text"  />
-						</label>
-						<label for="" class="l_name clearfix">
-							<span>Last Name *</span>
-							<input type="text"  />
-						</label>
-						<label class="clearfix" for="">
-							<span>E-mail Address*</span>
-							<input type="text"  />
-						</label>
-						<label class="clearfix" for="">
-							<span>Telephone*</span>
-							<input type="text"  />
-						</label>
-						<button>UPDATA</button>
+						<div class="form_div clearfix">
+							<p>* Required fields</p>
+							<label for="" class="f_name clearfix">
+								<span>Frist Name *</span>
+								<input type="text"  />
+							</label>
+							<label for="" class="l_name clearfix">
+								<span>Last Name *</span>
+								<input type="text"  />
+							</label>
+							<label class="clearfix" for="">
+								<span>E-mail Address*</span>
+								<input type="text"  />
+							</label>
+							<label class="clearfix" for="">
+								<span>Telephone*</span>
+								<input type="text"  />
+							</label>
+							<button>UPDATE</button>
+						</div>
 					</form>
 					<form action="" class="clearfix">
-						<h2>Change Password</h2>
-						<label for="">
-							<span>Password*</span>
-							<input type="password"  />
-						</label>
-						<label for="">
-							<span>New Password*</span>
-							<input type="password"  />
-						</label>
-						<label for="">
-							<span>Confirm Password*</span>
-							<input type="password"  />
-						</label>
-						<button>UPDATA</button>
+						<div class="form_div clearfix">
+							<h2>Change Password</h2>
+							<label for="">
+								<span>Password*</span>
+								<input type="password"  />
+							</label>
+							<label for="">
+								<span>New Password*</span>
+								<input type="password"  />
+							</label>
+							<label for="">
+								<span>Confirm Password*</span>
+								<input type="password"  />
+							</label>
+							<button>UPDATE</button>
+						</div>
 					</form>
 				</div>
 				
