--- a/catalog/view/theme/default/view_order2.html
+++ b/catalog/view/theme/default/view_order2.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>Personal Center</title>
+		<title>VIEW THE ORDER</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -205,35 +205,108 @@
 		
 		</div>
 		<!--内容-->
-		<div class=" in_content peo_center">
-			<div class="content clearfix">
-				
-				<div class="left clearfix">
-					<h1>MY ACCOUNT</h1>
-					<ol>
-						<li class="active"><a href="###">My Orders</a></li>
-						<li><a href="###">Account Information</a></li>
-						<li><a href="###">Address List</a></li>
-						<li><a href="###">My Shopping Cart</a></li>
-						<li><a href="###">My Wish List</a></li>
-						<li><a href="###">My VIP</a></li>
-						<li><a href="###">My Coupon</a></li>
-						<li><a href="###">Help Center</a></li>
-						<li><a href="###">Logout </a></li>
-					</ol>
-				</div>
-				
-				<div class="right m_account clearfix">
+		<div class="view_order">
+			<div class="content in_content clearfix">
+				<div class="text_con clearfix">
+					<h1>Order Information</h1>
+					<div class="top clearfix">
+						<div class="hui_div clearfix">
+							<p><span>Order Date: </span>2018-05-28</p>
+							<p><span>Order Number: </span>Hot152747427492</p>
+							<p><span>Order Status: </span>Pending</p>
+						</div>
+						<div class="ship clearfix">
+							<div class="left clearfix">
+								<span class="h2_span">Shipping Address</span>
+								<div class="text clearfix">
+									<p>LIUBIHUI</p>
+									<p>A lane in jiangxia village, baiyun district</p>
+									<p>Guangzhou,Guangdong province</p>
+									<p>510000</p>
+									<p>China</p>
+									<p>+8615601634559</p>
+									<button class="editadd">Edit Address</button>
+								</div>
+							</div>
+							<div class="right clearfix">
+								<span class="h2_span">Shipping Method</span>
+								<div class="text clearfix">
+									<p>Nigeria Local Express <span>$0.00</span></p>
+									<p>（Weight: 200.00g）</p>
+									<button class="editship">Edit Shipping Method</button>
+								</div>
+							</div>
+						</div>
+					</div>
 					
-					<img src="img/png/address.png"/>
-					<p>You currently have no addresses saved </p>
-					<a class="a_btn" href="###">ADD ADDRESS &nbsp;&nbsp;&nbsp;></a>
+					<div class="bot clearfix">
+						<div class="hui_div clearfix">
+							<p>Product Information</p>
+						</div>
+						<div class="text clearfix">
+							<div class="span_div clearfix">
+								<span>Subtotal</span>
+								<span>Length</span>
+								<span>Quantity</span>
+								<span>Unit  Price</span>
+							</div>							
+							
+							<ul class="order_ul clearfix">
+								<li class="clearfix">
+									<div class="pic_img">
+										<img src="" alt="" />										
+									</div>
+									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
+									<span>$35.05</span>
+									<span>1</span>
+									<span>12inch</span>
+									<span>$35.05</span>
+								</li>
+								<li class="clearfix">
+									<div class="pic_img">
+										<img src="" alt="" />										
+									</div>
+									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
+									<span>$35.05</span>
+									<span>1</span>
+									<span>12inch</span>
+									<span>$35.05</span>
+								</li>
+								<li class="clearfix">
+									<div class="pic_img">
+										<img src="" alt="" />										
+									</div>
+									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
+									<span>$35.05</span>
+									<span>1</span>
+									<span>12inch</span>
+									<span>$35.05</span>
+								</li>
+								<li class="clearfix">
+									<div class="pic_img">
+										<img src="" alt="" />										
+									</div>
+									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
+									<span>$35.05</span>
+									<span>1</span>
+									<span>12inch</span>
+									<span>$35.05</span>
+								</li>
+							</ul>
+							
+							
+							<div class="total clearfix">
+								<p class="clearfix"><span class="fl">Shipping </span><span class="fr">$0.00</span></p>
+								<p class="clearfix"><span class="p_span fl">Total </span><span class="fr">$490.00</span></p>
+							</div>
+						</div>
+					</div>
+					
+					<a class="a_btn" href="###">GO BACK</a>
 					
 				</div>
 				
 			</div>
-			
-			
 		</div>
 		
 		<!--返回顶部-->
