--- a/catalog/view/theme/default/product_details.html
+++ b/catalog/view/theme/default/product_details.html
@@ -251,15 +251,48 @@
 						<div class="top_text">
 							<a href="###">Raw Super Double Drawn BoB</a>
 							<p class="price"><span>$36.59</span><i>$136.00</i></p>
-							<p class="text_p"><span>Hair Color:</span> Natural Black</p>
-							<div class="label_div clearfix">
-								<label class="num_label" for="">
+							<!--<div class="select_div hiar_color clearfix">
+								<span>Hair Color:</span>
+								<button class="select_btn"><span>Natural Black</span></button>
+								<div class="select_ul">
+									<ul>
+										<li>Natural Black</li>
+										<li>Natural 1</li>
+										<li>Natural 2</li>
+										<li>Natural 3</li>
+										<li>Natural 4</li>
+										<li>Natural 5</li>
+									</ul>
+								</div>
+							</div>-->
+							
+								<label class="num_label clearfix" for="">
 									<span>Quantity:</span>
 									<div class="price_input clearfix">
 										<span class="sub"></span>
 										<input class="num" type="text" value="1"/>
 										<span class="add"></span>
 									</div>
+								</label>
+							<div class="label_div clearfix">
+								<label class="len_label" for="">
+									<span>Hair Color:</span>
+									<div class="select_div">
+										<button class="select_btn"><span>Natural Black</span></button>
+										<div class="select_ul">
+											<ul>
+												<li>Natural Black</li>
+												<li>Jet Black</li>
+												<li>Ash Bloned</li>
+											</ul>
+										</div>
+									</div>
+									<ul style="display: none;" class="clearfix">
+										<li class="active">Natural Black</li>
+										<li>Jet Black</li>
+										<li>Ash Bloned</li>
+									</ul>
+									
 								</label>
 								<label class="len_label" for="">
 									<span>Length:</span>
